// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarItem should render 1`] = `
<DocumentFragment>
  <div
    class="relative cursor-pointer"
    data-testid="side-menu__item--plugin"
  >
    <li
      class="rounded-lg py-5 pl-10 pr-8 h-15 text-theme-medium flex items-center"
    >
      <div
        class="text-theme-primary-light"
      >
        <div
          class="sc-AxjAm buCJuk"
          height="20"
          width="20"
        >
          <svg>
            plugin.svg
          </svg>
        </div>
      </div>
      <span
        class="ml-3 text-lg font-medium"
      >
        General
      </span>
    </li>
  </div>
</DocumentFragment>
`;

exports[`SideBarItem should render as active 1`] = `
<DocumentFragment>
  <div
    class="relative cursor-pointer"
    data-testid="side-menu__item--plugin"
  >
    <div
      class="sc-AxirZ dA-dDXy absolute top-0 left-0 rounded-lg bg-theme-primary"
    />
    <li
      class="rounded-lg py-5 pl-10 pr-8 h-15 text-theme-primary bg-theme-primary-contrast flex items-center"
    >
      <div
        class="text-theme-primary"
      >
        <div
          class="sc-AxjAm buCJuk"
          height="20"
          width="20"
        >
          <svg>
            plugin.svg
          </svg>
        </div>
      </div>
      <span
        class="ml-3 text-lg font-semibold"
      >
        General
      </span>
    </li>
  </div>
</DocumentFragment>
`;
